# kennisfestival-docker

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/backend/: main.py
backend/backend/apis/: api.py
backend/backend/apis/endpoints/: tasks.py
backend/backend/core/: config.py
backend/backend/schemas/: tasks.py
docs/: exercises.md
event/: index.html
frontend/: .dockerignore  package.json
frontend/src/: App.vue
