[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Olaf Schusler <olaf.schusler@navara.nl>"]

[tool.poetry.scripts]
serve = "backend.main:serve"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.84.0"
uvicorn = "^0.18.3"
pydantic = "^1.10.2"
pymongo = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
